--- a/MTGDeck/MTGDeck/Base.lproj/LaunchScreen.storyboard
+++ b/MTGDeck/MTGDeck/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,20 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mtgdeckLaunh" translatesAutoresizingMaskIntoConstraints="NO" id="u3I-eD-c1w">
+                                <rect key="frame" x="204" y="204" width="192" height="192"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="192" id="sQF-OR-S11"/>
+                                    <constraint firstAttribute="width" constant="192" id="wSE-Vf-lc8"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.70590466125406692" blue="0.028896374547568549" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="u3I-eD-c1w" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="GS6-FK-3om"/>
+                            <constraint firstItem="u3I-eD-c1w" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="seN-66-QP5"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +37,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="mtgdeckLaunh" width="1024" height="1024"/>
+    </resources>
 </document>
