--- a/MTGDeck/MTGDeck/Base.lproj/Main.storyboard
+++ b/MTGDeck/MTGDeck/Base.lproj/Main.storyboard
@@ -55,7 +55,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wmw-E5-V2y" customClass="RoundedImageView" customModule="MTGDeck" customModuleProvider="target">
-                                <rect key="frame" x="20" y="40" width="204.5" height="285"/>
+                                <rect key="frame" x="20" y="40" width="205" height="285"/>
                             </imageView>
                             <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CJG-OE-pd7">
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
@@ -68,14 +68,14 @@
                                     <rect key="frame" x="-18" y="79" width="240" height="128"/>
                                 </variation>
                             </visualEffectView>
-                            <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Vhj-zr-zOH">
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Vhj-zr-zOH">
                                 <rect key="frame" x="20" y="20" width="560" height="285"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A9N-Jd-KZc">
                                         <rect key="frame" x="0.0" y="0.0" width="205" height="285"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sower" translatesAutoresizingMaskIntoConstraints="NO" id="dR8-XR-3HE" customClass="RoundedImageView" customModule="MTGDeck" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="204.5" height="285"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="205" height="285"/>
                                             </imageView>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -124,6 +124,9 @@
                                         </variation>
                                     </stackView>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="1nG-wR-7CE" secondAttribute="bottom" id="9Fu-Co-tdo"/>
+                                </constraints>
                                 <variation key="widthClass=compact" alignment="center" axis="vertical" misplaced="YES" spacing="30">
                                     <rect key="frame" x="20" y="20" width="360" height="392"/>
                                 </variation>
@@ -132,6 +135,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Vhj-zr-zOH" firstAttribute="top" secondItem="5yV-4V-TzF" secondAttribute="bottom" constant="30" id="1Mh-f4-e79"/>
+                            <constraint firstItem="2Gr-43-uWv" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Vhj-zr-zOH" secondAttribute="bottom" id="3kz-ph-Zed"/>
                             <constraint firstItem="wmw-E5-V2y" firstAttribute="centerX" secondItem="dR8-XR-3HE" secondAttribute="centerX" id="62D-4A-eaI"/>
                             <constraint firstItem="wmw-E5-V2y" firstAttribute="top" secondItem="dR8-XR-3HE" secondAttribute="top" id="BV1-Zy-5Cv"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Vhj-zr-zOH" secondAttribute="trailing" id="De1-Ca-fR1"/>
